--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -92,6 +92,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: install eslint 
+        run: npm install 
+
       - name: Run application linter
         # Assuming 'npm run lint' is defined in package.json
         run: npm run lint
@@ -119,3 +122,31 @@ jobs:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         continue-on-error: true 
+
+  secret-detect:
+    name: Secret Detection
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Required for Gitleaks/TruffleHog to scan full history
+
+      - name: Run TruffleHog
+        # Using a dedicated action is generally better for caching and maintenance
+        uses: trufflesecurity/trufflehog@add-actions-cli-switch  # Or a specific version like v1.0.0
+        with:
+          path: ./
+          base: ${{ github.sha }} # Scan only changes from the current commit
+          extra_args: --only-verified
+        continue-on-error: true 
+
+      - name: Run Gitleaks
+        uses: gitleaks/gitleaks-action@v2
+        with:
+          args: "--verbose --redact"
+
+      - name: Secret Scanner
+        uses: secret-scanner/action@0.0.2
+        continue-on-error: true
