--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -158,3 +158,228 @@ jobs:
         uses: gitleaks/gitleaks-action@v2
         with:
           args: "--verbose --redact"
+
+
+  unit-tests:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    needs: install-dependencies
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Node.js dependencies (if not already cached/present)
+        # This is a good practice if unit-tests run in a fresh runner or parallel to install-dependencies
+        run: npm install 
+
+      - name: Run Unit Tests
+        # Assuming 'npm test' is defined in package.json
+        run: echo "unit test happens here"
+      
+      - name: code coverage report 
+        run: echo "code coverage happens here"
+
+
+  sonar-scan:
+    name: SonarQube Static Code Analysis
+    runs-on: ubuntu-latest
+    needs: unit-tests
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+         java-version: '17'
+         distribution: 'temurin'
+
+      - name: Run SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@master 
+
+      - name: run sonar-scanner
+        run: |
+          echo "sonar scanner happens here"
+          # sonar-scanner 
+          # -Dsonar.projectKey=front-end \
+          # -Dsonar.sources=. \
+          # -Dsonar.host.url=http://34.55.243.214:9000 \
+          # -Dsonar.token=sqp_4917cd555ce3c69d3c645c736759c6fd97c3a7ac
+
+  build:
+    name: Build Application
+    runs-on: ubuntu-latest
+    needs: sonar-scan
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Node.js dependencies (if not already cached/present)
+        run: npm install 
+
+      - name: Build App
+        # Assuming 'npm run build' generates production-ready assets
+        run: npm run build
+
+  tests: 
+    name: running the multipel tests 
+    runs-on: ubuntu-latest 
+    needs: build 
+    steps: 
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Node.js dependencies (if needed for testing framework)
+        run: npm install 
+
+      - name: mutation tests 
+        run: |
+          echo "mutation tests happens here"
+      - name: snapshot testing 
+        run: |
+          echo "snapshot testing happens here"
+      - name: component tetsting happens here 
+        run: |
+          echo "component testing happens here"
+
+  archive:
+    name: Create Archive
+    runs-on: ubuntu-latest
+    needs: tests # Depends on tests passing
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Create and Upload Artifact
+        # Assuming 'dist' directory contains the build output
+        run: |
+          # Ensure the 'dist' directory exists before archiving
+          if [ ! -d "./dist" ]; then
+            echo "::error::Build output directory 'dist' not found. Please ensure 'npm run build' creates it."
+            exit 1
+          fi
+          tar -czvf app.tar.gz ./dist
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-package
+          path: app.tar.gz
+          retention-days: 7 
+
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: clone-tag-and-config
+    outputs:
+      image_tag: ${{ steps.build_tag.outputs.image_tag }}
+
+    env:
+      # Set IMAGE_TAG as a job-level environment variable for consistent access across steps
+      # This will be populated from the output of the 'build_tag' step.
+      image_tag: ${{ steps.build_tag.outputs.image_tag }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Docker Build
+        id: build_tag # This ID is used to reference the outputs of this step
+        run: |
+          DOCKER_USERNAME=${{ needs.clone-tag-and-config.outputs.docker_username }}
+          SERVICE_NAME=${{ needs.clone-tag-and-config.outputs.service_name }}
+          VERSION=${{ needs.clone-tag-and-config.outputs.version }}
+          BRANCH_NAME=${GITHUB_REF##*/}
+
+          # Construct the image tag
+          # For releases, you might want to omit BRANCH_NAME for cleaner tags (e.g., $DOCKER_USERNAME/$SERVICE_NAME:$VERSION)
+          IMAGE_TAG="$DOCKER_USERNAME/${SERVICE_NAME}-${BRANCH_NAME}:$VERSION"
+
+          # Make IMAGE_TAG available as an output of this step and for subsequent steps via 'env'
+          echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "Building Docker image with tag: $IMAGE_TAG"
+          docker build -t $IMAGE_TAG .
+
+      - name: Set up Snyk CLI
+        # Pin to a stable major version (e.g., v1) for automatic updates and bug fixes
+        uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
+        env:
+          SNYK_TOKEN: d9141a36-1bc7-49bb-b541-bc2a1c31b3bf
+
+      - name: Authenticate Snyk
+        run: snyk auth d9141a36-1bc7-49bb-b541-bc2a1c31b3bf
+
+      - name: Snyk Container Scan
+        env:
+          IMAGE_TAG: ${{ steps.build_tag.outputs.image_tag }}
+        run: |
+          # Use the job-level IMAGE_TAG environment variable
+          snyk container test ${{ env.IMAGE_TAG }} --json > snyk-image-report.json
+        continue-on-error: true # Allow the workflow to proceed even if Snyk finds vulnerabilities
+
+      - name: Run Trivy vulnerability scanner
+        # Pin to a stable major version (e.g., v0)
+        uses: aquasecurity/trivy-action@v0
+        env:
+          IMAGE_TAG: ${{ steps.build_tag.outputs.image_tag }}
+        with:
+          image-ref: ${{ env.IMAGE_TAG }}
+          format: 'template'
+          template: '@/contrib/sarif.tpl' # Output in SARIF format
+          output: 'trivy-results.sarif' # Name the output file appropriately
+          severity: 'CRITICAL,HIGH'
+        continue-on-error: true # Allow the workflow to proceed even if Trivy finds vulnerabilities
+
+      - name: Install Dockle
+        env:
+          IMAGE_TAG: ${{ steps.build_tag.outputs.image_tag }}
+        run: |
+          # Fetch the latest stable version of Dockle
+          VERSION=$(
+            curl --silent "https://api.github.com/repos/goodwithtech/dockle/releases/latest" | \
+            grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/'
+          )
+          curl -L -o dockle.rpm "https://github.com/goodwithtech/dockle/releases/download/v${VERSION}/dockle_${VERSION}_Linux-64bit.rpm"
+          sudo rpm -ivh dockle.rpm
+      
+      - name: Run Dockle Scan
+        env:
+          IMAGE_TAG: ${{ steps.build_tag.outputs.image_tag }}
+        run: dockle ${{ env.IMAGE_TAG }}
+
+      - name: Run Anchore Grype scan action
+        # Pin to a stable major version (e.g., v6)
+        uses: anchore/scan-action@v6
+        id: scan # This ID is crucial for accessing the SARIF output
+        env:
+          IMAGE_TAG: ${{ steps.build_tag.outputs.image_tag }}
+        with:
+          image: ${{ env.IMAGE_TAG }}
+          fail-build: true # Fail the build if the severity cutoff is met
+          severity-cutoff: critical # Only critical vulnerabilities will fail the build
+        # Removed 'continue-on-error: true' here.
+        # If 'fail-build: true' is set, and critical vulnerabilities are found, this step *will* fail the workflow.
+        # If you want to log the findings but still allow the build to continue to push the image,
+        # you would re-add 'continue-on-error: true', but be aware of the security implications.
+
+      - name: Upload Scan Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: container-scan-reports
+          path: |
+            snyk-image-report.json
+            trivy-results.sarif # Updated filename
+
+      - name: Upload Anchore SARIF Report
+        # This step is crucial for integrating with GitHub Code Scanning alerts
+        uses: github/codeql-action/upload-sarif@v3
+        if: success() || failure() # Upload even if previous steps failed to capture scan results
+        with:
+          sarif_file: ${{ steps.scan.outputs.sarif }} # Ensure this path is correct for Grype's SARIF output
+
+      - name: Docker Login & Push
+        env:
+          IMAGE_TAG: ${{ steps.build_tag.outputs.image_tag }}
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          docker push ${{ env.IMAGE_TAG }} # Use the job-level IMAGE_TAG environment variable
