--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -196,7 +196,7 @@ jobs:
 
       - name: Run SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master 
-        
+
 
       # - name: run sonar-scanner
       #   run: |
@@ -269,16 +269,14 @@ jobs:
 
 
   docker-build:
+    name: docker build 
     runs-on: ubuntu-latest
     needs: clone-tag-and-config
     outputs:
       image_tag: ${{ steps.build_tag.outputs.image_tag }}
-
     env:
-      # Set IMAGE_TAG as a job-level environment variable for consistent access across steps
-      # This will be populated from the output of the 'build_tag' step.
       image_tag: ${{ steps.build_tag.outputs.image_tag }}
-
+      
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -383,3 +381,4 @@ jobs:
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
           docker push ${{ env.IMAGE_TAG }} # Use the job-level IMAGE_TAG environment variable
+  
