--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -271,7 +271,7 @@ jobs:
   docker-build:
     name: docker build 
     runs-on: ubuntu-latest
-    needs: clone-tag-and-config
+    needs: [archive]
     outputs:
       image_tag: ${{ steps.build_tag.outputs.image_tag }}
     steps:
@@ -314,7 +314,7 @@ jobs:
 
       - name: Run Trivy vulnerability scanner
         # Pin to a stable major version (e.g., v0)
-        uses: aquasecurity/trivy-action@v0
+        uses: aquasecurity/trivy-action@master
         env:
           IMAGE_TAG: ${{ steps.build_tag.outputs.image_tag }}
         with:
