--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -211,7 +211,8 @@ jobs:
         run: npm install 
 
       - name: Build App
-        run: npm run build
+        run: |
+          CI=false npm run build
 
   tests: 
     name: running the multipel tests 
@@ -370,3 +371,4 @@ jobs:
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
           docker push ${{ env.IMAGE_TAG }} # Use the job-level IMAGE_TAG environment variable
+  
