--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -58,200 +58,199 @@ jobs:
           echo "version is ${{ steps.get_tag.outputs.version }} "
 
 
-  install-dependencies:
-    name: Install Dependencies
-    runs-on: ubuntu-latest
-    needs: clone-tag-and-config
-    steps:
-      - name: checkout code
-        uses: actions/checkout@v4
+  # install-dependencies:
+  #   name: Install Dependencies
+  #   runs-on: ubuntu-latest
+  #   needs: clone-tag-and-config
+  #   steps:
+  #     - name: checkout code
+  #       uses: actions/checkout@v4
 
 
-      - name: install the dependencies here
-        run: npm install
+  #     - name: install the dependencies here
+  #       run: npm install
     
-      - name: Set up Snyk CLI
-        uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
-        env:
-          SNYK_TOKEN: d9141a36-1bc7-49bb-b541-bc2a1c31b3bf
+  #     - name: Set up Snyk CLI
+  #       uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
+  #       env:
+  #         SNYK_TOKEN: d9141a36-1bc7-49bb-b541-bc2a1c31b3bf
 
-      - name: Authenticate Snyk
-        run: snyk auth d9141a36-1bc7-49bb-b541-bc2a1c31b3bf
+  #     - name: Authenticate Snyk
+  #       run: snyk auth d9141a36-1bc7-49bb-b541-bc2a1c31b3bf
 
-      - name: scanning the dependencies
-        run: snyk test --file=package-lock.json
-        continue-on-error: true
+  #     - name: scanning the dependencies
+  #       run: snyk test --file=package-lock.json
+  #       continue-on-error: true
     
 
     
-  lint:
-    name: Run Linter
-    runs-on: ubuntu-latest
-    needs: install-dependencies
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # lint:
+  #   name: Run Linter
+  #   runs-on: ubuntu-latest
+  #   needs: install-dependencies
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: install eslint 
-        run: npm install 
+  #     - name: install eslint 
+  #       run: npm install 
 
-      - name: Run application linter
-        # Assuming 'npm run lint' is defined in package.json
-        run: npm run lint
-        continue-on-error: true
+  #     - name: Run application linter
+  #       # Assuming 'npm run lint' is defined in package.json
+  #       run: npm run lint
+  #       continue-on-error: true
 
-      - name: Run hadolint
-        uses: hadolint/hadolint-action@master
-        with:
-          dockerfile: ./Dockerfile
-          format: sarif
-          output-file: hadolint-results.sarif
-          no-fail: true
+  #     - name: Run hadolint
+  #       uses: hadolint/hadolint-action@master
+  #       with:
+  #         dockerfile: ./Dockerfile
+  #         format: sarif
+  #         output-file: hadolint-results.sarif
+  #         no-fail: true
 
-      - name: Upload analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: hadolint-results.sarif
-          wait-for-processing: true
+  #     - name: Upload analysis results to GitHub
+  #       uses: github/codeql-action/upload-sarif@v3
+  #       if: always()
+  #       with:
+  #         sarif_file: hadolint-results.sarif
+  #         wait-for-processing: true
 
-      - name: Run Super-Linter
-        uses: github/super-linter@v6
-        env:
-          VALIDATE_ALL_CODEBASE: true
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        continue-on-error: true 
+  #     - name: Run Super-Linter
+  #       uses: github/super-linter@v6
+  #       env:
+  #         VALIDATE_ALL_CODEBASE: true
+  #         DEFAULT_BRANCH: main
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       continue-on-error: true 
 
-  secret-detect:
-    name: Secret Detection
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # Required for Gitleaks/TruffleHog to scan full history
+  # secret-detect:
+  #   name: Secret Detection
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0 # Required for Gitleaks/TruffleHog to scan full history
 
-      - name: Setup Python for detect-secrets
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+  #     - name: Setup Python for detect-secrets
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: '3.10'
 
-      - name: Install detect-secrets
-        run: pip install detect-secrets
+  #     - name: Install detect-secrets
+  #       run: pip install detect-secrets
 
-      - name: Run detect-secrets
-        run: |
-          detect-secrets scan > .secrets.new.baseline
+  #     - name: Run detect-secrets
+  #       run: |
+  #         detect-secrets scan > .secrets.new.baseline
 
-      - name: Run TruffleHog
-        # Using a dedicated action is generally better for caching and maintenance
-        uses: edplato/trufflehog-actions-scan@master  # Or a specific version like v1.0.0
-        with:
-          path: ./
-          base: ${{ github.sha }} # Scan only changes from the current commit
-          extra_args: --only-verified
-        continue-on-error: true 
+  #     - name: Run TruffleHog
+  #       # Using a dedicated action is generally better for caching and maintenance
+  #       uses: edplato/trufflehog-actions-scan@master  # Or a specific version like v1.0.0
+  #       with:
+  #         path: ./
+  #         base: ${{ github.sha }} # Scan only changes from the current commit
+  #         extra_args: --only-verified
+  #       continue-on-error: true 
 
-      - name: Run Gitleaks
-        uses: gitleaks/gitleaks-action@v2
-        with:
-          args: "--verbose --redact"
+  #     - name: Run Gitleaks
+  #       uses: gitleaks/gitleaks-action@v2
+  #       with:
+  #         args: "--verbose --redact"
 
 
-  unit-tests:
-    name: Run Unit Tests
-    runs-on: ubuntu-latest
-    needs: secret-detect
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # unit-tests:
+  #   name: Run Unit Tests
+  #   runs-on: ubuntu-latest
+  #   needs: secret-detect
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Install Node.js dependencies (if not already cached/present)
-        # This is a good practice if unit-tests run in a fresh runner or parallel to install-dependencies
-        run: npm install 
+  #     - name: Install Node.js dependencies (if not already cached/present)
+  #       # This is a good practice if unit-tests run in a fresh runner or parallel to install-dependencies
+  #       run: npm install 
 
-      - name: Run Unit Tests
-        # Assuming 'npm test' is defined in package.json
-        run: echo "unit test happens here"
+  #     - name: Run Unit Tests
+  #       # Assuming 'npm test' is defined in package.json
+  #       run: echo "unit test happens here"
       
-      - name: code coverage report 
-        run: echo "code coverage happens here"
+  #     - name: code coverage report 
+  #       run: echo "code coverage happens here"
 
 
-  sonar-scan:
-    name: SonarQube Static Code Analysis
-    runs-on: ubuntu-latest
-    needs: unit-tests
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # sonar-scan:
+  #   name: SonarQube Static Code Analysis
+  #   runs-on: ubuntu-latest
+  #   needs: unit-tests
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Set up Java 17
-        uses: actions/setup-java@v3
-        with:
-         java-version: '17'
-         distribution: 'temurin'
+  #     - name: Set up Java 17
+  #       uses: actions/setup-java@v3
+  #       with:
+  #        java-version: '17'
+  #        distribution: 'temurin'
 
-      - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@master
-        continue-on-error: true 
+  #     - name: SonarQube Scan
+  #       uses: sonarsource/sonarqube-scan-action@master
+  #       continue-on-error: true 
 
 
-  build:
-    name: Build Application
-    runs-on: ubuntu-latest
-    needs: sonar-scan
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # build:
+  #   name: Build Application
+  #   runs-on: ubuntu-latest
+  #   needs: sonar-scan
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Install Node.js dependencies (if not already cached/present)
-        run: npm install 
+  #     - name: Install Node.js dependencies (if not already cached/present)
+  #       run: npm install 
 
-      - name: Build App
-        run: |
-          CI=false npm run build
+  #     - name: Build App
+  #       run: |
+  #         CI=false npm run build
 
-  tests: 
-    name: running the multipel tests 
-    runs-on: ubuntu-latest 
-    needs: build 
-    steps: 
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # tests: 
+  #   name: running the multipel tests 
+  #   runs-on: ubuntu-latest 
+  #   needs: build 
+  #   steps: 
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Install Node.js dependencies (if needed for testing framework)
-        run: npm install 
+  #     - name: Install Node.js dependencies (if needed for testing framework)
+  #       run: npm install 
 
-      - name: mutation tests 
-        run: |
-          echo "mutation tests happens here"
-      - name: snapshot testing 
-        run: |
-          echo "snapshot testing happens here"
-      - name: component tetsting happens here 
-        run: |
-          echo "component testing happens here"
+  #     - name: mutation tests 
+  #       run: |
+  #         echo "mutation tests happens here"
+  #     - name: snapshot testing 
+  #       run: |
+  #         echo "snapshot testing happens here"
+  #     - name: component tetsting happens here 
+  #       run: |
+  #         echo "component testing happens here"
 
   archive:
     name: Create Archive
     runs-on: ubuntu-latest
-    needs: tests # Depends on tests passing
+    needs: [tests,clone-tag-and-config] # Depends on tests passing
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      
 
       - name: Create and Upload Artifact
         # Assuming 'dist' directory contains the build output
         run: |
-          # Ensure the 'dist' directory exists before archiving
-          if [ ! -d "./dist" ]; then
-            echo "::error::Build output directory 'dist' not found. Please ensure 'npm run build' creates it."
-            exit 1
-          fi
-          tar -czvf app.tar.gz ./dist
+          service_name=${{ needs.clone-tag-and-config.outputs.service_name }}
+          VERSION=${{ needs.clone-tag-and-config.outputs.version }}
+          BRANCH_NAME=${GITHUB_REF##*/}
+          zip -r $service_name-$BRANCH_NAME-$VERSION.zip src/
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
@@ -264,7 +263,7 @@ jobs:
   docker-build:
     name: docker build 
     runs-on: ubuntu-latest
-    needs: [archive]
+    needs: [archive,clone-tag-and-config]
     outputs:
       image_tag: ${{ steps.build_tag.outputs.image_tag }}
     steps:
@@ -371,4 +370,3 @@ jobs:
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
           docker push ${{ env.IMAGE_TAG }} # Use the job-level IMAGE_TAG environment variable
-  
