--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -236,28 +236,29 @@ jobs:
   #         echo "component testing happens here"
 
   archive:
-    name: Create Archive
-    runs-on: ubuntu-latest
-    needs: [clone-tag-and-config] # Depends on tests passing
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
+  name: Create Archive
+  runs-on: ubuntu-latest
+  needs: [clone-tag-and-config]
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Create and Upload Artifact
-        # Assuming 'dist' directory contains the build output
-        run: |
-          service_name=${{ needs.clone-tag-and-config.outputs.service_name }}
-          VERSION=${{ needs.clone-tag-and-config.outputs.version }}
-          BRANCH_NAME=${GITHUB_REF##*/}
-          zip -r $service_name-$BRANCH_NAME-$VERSION.zip src/
+    - name: Create Archive Name and Zip File
+      id: zipstep
+      run: |
+        service_name="${{ needs.clone-tag-and-config.outputs.service_name }}"
+        VERSION="${{ needs.clone-tag-and-config.outputs.version }}"
+        BRANCH_NAME="${GITHUB_REF##*/}"
+        ZIP_NAME="${service_name}-${BRANCH_NAME}-${VERSION}.zip"
+        echo "ZIP_NAME=$ZIP_NAME" >> $GITHUB_OUTPUT
+        zip -r "$ZIP_NAME" src/
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-package
-          path: app.tar.gz
-          retention-days: 7 
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ steps.zipstep.outputs.ZIP_NAME }}
+        path: ${{ steps.zipstep.outputs.ZIP_NAME }}
+        retention-days: 7
 
 
   docker-build:
@@ -363,10 +364,3 @@ jobs:
         if: success() || failure() # Upload even if previous steps failed to capture scan results
         with:
           sarif_file: ${{ steps.scan.outputs.sarif }} # Ensure this path is correct for Grype's SARIF output
-
-      - name: Docker Login & Push
-        env:
-          IMAGE_TAG: ${{ steps.build_tag.outputs.image_tag }}
-        run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          docker push ${{ env.IMAGE_TAG }} # Use the job-level IMAGE_TAG environment variable
